<resources>
    <string name="app_name">CursoKotlinDog</string>
    <string name="female">Female</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="group">Group</string>
    <string name="male">Male</string>
    <string name="image">sin imagen</string>

    <string name="error_showing_dog_not_found">Error showing dog, dog not found</string>
    <string name="error_unknown_host_exception">There is no connection</string>
    <string name="error_unknown">There was an error</string>
    <string name="dog_index_format">#%d</string>
    <string name="dog_life_expectancy_format">%s years</string>

    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="do_not_have_an_accout">Do not have an accout</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="password_is_not_valid">Password is not valid</string>
    <string name="password_do_not_match">Password do not match</string>
    <string name="error_sign_up">Error signing up</string>
    <string name="error_sign_in">Error signin In</string>
    <string name="user_already_exists">User already exists</string>
    <string name="there_was_an_error">There was an error</string>
</resources>